# LuvCoro

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
examples/: CMakeLists.txt  blocking_cancel.cpp  blocking_parallel.cpp  blocking_roundtrip.cpp  cancel_timeout.cpp  dns_lookup.cpp  fs_roundtrip.cpp  fs_watch_roundtrip.cpp  io_cancel.cpp  local_sync_roundtrip.cpp  message_async_cancel.cpp  message_async_foreach.cpp  message_async_foreach_parallel.cpp  message_async_iteration.cpp  message_async_timeout_iteration.cpp  message_bounded.cpp  message_iteration.cpp  message_pressure.cpp  message_roundtrip.cpp  message_select.cpp  pipe_roundtrip.cpp  process_roundtrip.cpp  sendfile_roundtrip.cpp  signal_roundtrip.cpp  spawn_detached.cpp  spawn_logged.cpp  spawn_periodic.cpp  spawn_timer.cpp  stdio_roundtrip.cpp  structured_scope.cpp  sync_roundtrip.cpp  tcp_echo_client.cpp  tcp_echo_server.cpp  tcp_roundtrip.cpp  timer_roundtrip.cpp  tty_roundtrip.cpp  udp_echo_client.cpp  udp_echo_server.cpp  udp_multicast_receiver.cpp  udp_multicast_sender.cpp  (+1 more)
include/luvcoro/: buffer.hpp  control.hpp  dns.hpp  endpoint.hpp  error.hpp  fs.hpp  io.hpp  luvcoro.hpp  message.hpp  pipe.hpp  process.hpp  runtime.hpp  signal.hpp  stdio.hpp  sync.hpp  task_scope.hpp  tcp.hpp  tty.hpp  udp.hpp
script/: bootstrap.py  pixi.toml
src/: dns.cpp  fs.cpp  fs_watch.cpp  pipe.cpp  process.cpp  runtime.cpp  signal.cpp  stdio.cpp  stream_ops.hpp  tcp.cpp  tty.cpp  udp.cpp
