cmake_minimum_required(VERSION 3.22)
project(LuvCoroExamples LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/.." "${CMAKE_CURRENT_BINARY_DIR}/luvcoro")

function(luvcoro_add_example target source)
  add_executable("${target}" "${source}")
  target_link_libraries("${target}" PRIVATE luvcoro)
endfunction()

luvcoro_add_example(luvcoro_blocking_roundtrip blocking_roundtrip.cpp)
luvcoro_add_example(luvcoro_blocking_parallel blocking_parallel.cpp)
luvcoro_add_example(luvcoro_blocking_cancel blocking_cancel.cpp)
luvcoro_add_example(luvcoro_dns_lookup dns_lookup.cpp)
luvcoro_add_example(luvcoro_pipe_roundtrip pipe_roundtrip.cpp)
luvcoro_add_example(luvcoro_process_roundtrip process_roundtrip.cpp)
luvcoro_add_example(luvcoro_message_roundtrip message_roundtrip.cpp)
luvcoro_add_example(luvcoro_message_bounded message_bounded.cpp)
luvcoro_add_example(luvcoro_message_pressure message_pressure.cpp)
luvcoro_add_example(luvcoro_message_iteration message_iteration.cpp)
luvcoro_add_example(luvcoro_message_async_iteration message_async_iteration.cpp)
luvcoro_add_example(luvcoro_message_async_foreach message_async_foreach.cpp)
luvcoro_add_example(luvcoro_message_async_foreach_parallel message_async_foreach_parallel.cpp)
luvcoro_add_example(luvcoro_message_async_timeout_iteration message_async_timeout_iteration.cpp)
luvcoro_add_example(luvcoro_message_async_cancel message_async_cancel.cpp)
luvcoro_add_example(luvcoro_message_select message_select.cpp)
luvcoro_add_example(luvcoro_timer_roundtrip timer_roundtrip.cpp)
luvcoro_add_example(luvcoro_signal_roundtrip signal_roundtrip.cpp)
luvcoro_add_example(luvcoro_sync_roundtrip sync_roundtrip.cpp)
luvcoro_add_example(luvcoro_local_sync_roundtrip local_sync_roundtrip.cpp)
luvcoro_add_example(luvcoro_tty_roundtrip tty_roundtrip.cpp)
luvcoro_add_example(luvcoro_stdio_roundtrip stdio_roundtrip.cpp)
luvcoro_add_example(luvcoro_cancel_timeout cancel_timeout.cpp)
luvcoro_add_example(luvcoro_structured_scope structured_scope.cpp)
luvcoro_add_example(luvcoro_spawn_detached spawn_detached.cpp)
luvcoro_add_example(luvcoro_spawn_logged spawn_logged.cpp)
luvcoro_add_example(luvcoro_spawn_timer spawn_timer.cpp)
luvcoro_add_example(luvcoro_spawn_periodic spawn_periodic.cpp)
luvcoro_add_example(luvcoro_io_cancel io_cancel.cpp)
luvcoro_add_example(luvcoro_echo_client tcp_echo_client.cpp)
luvcoro_add_example(luvcoro_tcp_echo_server tcp_echo_server.cpp)
luvcoro_add_example(luvcoro_tcp_roundtrip tcp_roundtrip.cpp)
luvcoro_add_example(luvcoro_udp_echo_server udp_echo_server.cpp)
luvcoro_add_example(luvcoro_udp_echo_client udp_echo_client.cpp)
luvcoro_add_example(luvcoro_udp_multicast_sender udp_multicast_sender.cpp)
luvcoro_add_example(luvcoro_udp_multicast_receiver udp_multicast_receiver.cpp)
luvcoro_add_example(luvcoro_udp_roundtrip udp_roundtrip.cpp)
luvcoro_add_example(luvcoro_fs_roundtrip fs_roundtrip.cpp)
luvcoro_add_example(luvcoro_fs_watch_roundtrip fs_watch_roundtrip.cpp)
luvcoro_add_example(luvcoro_sendfile_roundtrip sendfile_roundtrip.cpp)
